third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.24/tests/ui-stable/transmute-ptr-to-usize.stderr
error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> tests/ui-stable/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              the trait `IntoBytes` is not implemented for `*const usize`
   |                              required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `*const usize`
   = help: the trait `IntoBytes` is implemented for `usize`
note: required by a bound in `AssertIsIntoBytes`
  --> tests/ui-stable/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsIntoBytes`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> tests/ui-stable/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `*const usize`
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `*const usize`
   = help: the trait `IntoBytes` is implemented for `usize`
note: required by a bound in `AssertIsIntoBytes`
  --> tests/ui-stable/transmute-ptr-to-usize.rs:20:30
   |
20 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsIntoBytes`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
